--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="bg-black flex justify-between items-center p-2">
 
     <!-- spotify icon  -->
-    <div class="space-y-12 flex flex-col items-center justify-center ">
+    <div class="space-y-12 flex flex-col items-center justify-center cursor-pointer "  [routerLink]="['/home']">
         <svg  class="min-w-max"
           role="img"
           viewBox="0 0 24 24"
@@ -24,20 +24,22 @@
        <button class="p-3 mx-2 rounded-full bg-spotify-gray-dark" [routerLink]="['/home']">
         <svg data-encore-id="icon" role="img" aria-hidden="true" class="h-6 w-6"  viewBox="0 0 24 24"><path class="fill-white" d="M13.5 1.515a3 3 0 0 0-3 0L3 5.845a2 2 0 0 0-1 1.732V21a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-6h4v6a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V7.577a2 2 0 0 0-1-1.732l-7.5-4.33z"></path></svg>
        </button>
-         <!-- search  -->
-          <div class="p-3 rounded-full w-full  bg-spotify-gray-dark flex justify-between items-center">
-            <svg data-encore-id="icon" role="img" aria-hidden="true"  data-testid="search-icon" viewBox="0 0 24 24" class="w-6 h-6"><path class="fill-white" d="M10.533 1.27893C5.35215 1.27893 1.12598 5.41887 1.12598 10.5579C1.12598 15.697 5.35215 19.8369 10.533 19.8369C12.767 19.8369 14.8235 19.0671 16.4402 17.7794L20.7929 22.132C21.1834 22.5226 21.8166 22.5226 22.2071 22.132C22.5976 21.7415 22.5976 21.1083 22.2071 20.7178L17.8634 16.3741C19.1616 14.7849 19.94 12.7634 19.94 10.5579C19.94 5.41887 15.7138 1.27893 10.533 1.27893ZM3.12598 10.5579C3.12598 6.55226 6.42768 3.27893 10.533 3.27893C14.6383 3.27893 17.94 6.55226 17.94 10.5579C17.94 14.5636 14.6383 17.8369 10.533 17.8369C6.42768 17.8369 3.12598 14.5636 3.12598 10.5579Z"></path></svg>
-            <input type="text" placeholder="What do you want to play?" class="px-2 bg-transparent border-0  focus:outline-none text-white w-full">
-            <div class="flex">
-                <div class="  justify-end mx-3 items-center">
-                    <span class="border h-full border-gray-600 "></span>
-                   
-                </div>
-                <svg data-encore-id="icon" role="img" aria-hidden="true" class="w-6 h-6" viewBox="0 0 24 24"><path class="fill-white" d="M15 15.5c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2z"></path><path class="fill-white" d="M1.513 9.37A1 1 0 0 1 2.291 9h19.418a1 1 0 0 1 .979 1.208l-2.339 11a1 1 0 0 1-.978.792H4.63a1 1 0 0 1-.978-.792l-2.339-11a1 1 0 0 1 .201-.837zM3.525 11l1.913 9h13.123l1.913-9H3.525zM4 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v4h-2V3H6v3H4V2z"></path></svg>  
-            </div>
-      
-       
-        </div>
+     <!-- header.component.html -->
+<div class="p-3 rounded-full w-full  bg-spotify-gray-dark flex justify-between items-center">
+  <button (click)="onSearch()"  >
+    <svg xmlns="http://www.w3.org/2000/svg" data-encore-id="icon" role="img" aria-hidden="true" data-testid="search-icon" viewBox="0 0 24 24" class="w-6 h-6">
+      <path class="fill-white" d="M10.533 1.27893C5.35215 1.27893 1.12598 5.41887 1.12598 10.5579C1.12598 15.697 5.35215 19.8369 10.533 19.8369C12.767 19.8369 14.8235 19.0671 16.4402 17.7794L20.7929 22.132C21.1834 22.5226 21.8166 22.5226 22.2071 22.132C22.5976 21.7415 22.5976 21.1083 22.2071 20.7178L17.8634 16.3741C19.1616 14.7849 19.94 12.7634 19.94 10.5579C19.94 5.41887 15.7138 1.27893 10.533 1.27893ZM3.12598 10.5579C3.12598 6.55226 6.42768 3.27893 10.533 3.27893C14.6383 3.27893 17.94 6.55226 17.94 10.5579C17.94 14.5636 14.6383 17.8369 10.533 17.8369C6.42768 17.8369 3.12598 14.5636 3.12598 10.5579Z"></path>
+    </svg>
+  </button>
+  <input type="text"  (keydown)="onSearchInputChange($event)"  (keydown.enter)="onSearch()" placeholder="What do you want to play?" class="px-2 bg-transparent border-0  focus:outline-none text-white w-full">
+
+  <select (change)="onSearchTypeChange($event)" class="bg-spotify-gray-dark focus:outline-none text-white">
+    <option   value="track">Track</option>
+    <option  value="album">Album</option>
+    <option  value="playlist">Playlist</option>
+  </select>
+
+</div>
         
      
 
