--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
      
     </div>
   } @else { <!-- Device is mobile -->
-    <div class="flex flex-col h-screen w-full bg-spotify-auth-black">
+    <div class="flex flex-col max-h-screen h-screen w-full bg-spotify-auth-black">
       <!-- Header -->
       <app-header ></app-header>
 
