--- a/src/app/core/layout/footer/footer.component.html
+++ b/src/app/core/layout/footer/footer.component.html
@@ -1,6 +1,6 @@
 @if(currentTrack){<footer #pcFooter title="big-screen" class="bg-black hidden fixed bottom-0  sm:flex justify-between items-center p-2 w-full">
     <!-- Playing Track -->
-    <div class="flex justify-start min-w-max  space-x-4 items-center ">
+    <div class="flex justify-start   min-w-48 lg:min-w-3/12 space-x-4 items-center w-3/12  truncate">
         <!-- Image -->
         @if(currentTrack && currentTrack.album && currentTrack.album.images && currentTrack.album.images.length > 0) {
         <img [src]="currentTrack.album.images[0].url || 'https://i.pravatar.cc/300'"
@@ -12,8 +12,8 @@
 
         <!-- Track Info -->
         <div class="flex flex-col">
-            <span [routerLink]="['/track', currentTrack.id]" class="text-white text-sm">{{ currentTrack.name || 'Track Name' }}</span>
-            <span [routerLink]="['/artist', artistsString]" class="text-spotify-gray text-xs">{{ artistsString || 'Artist Name' }}</span>
+            <span [routerLink]="['/track', currentTrack.id]" class="text-white text-sm max-w-32  truncate">{{ currentTrack.name || 'Track Name' }}</span>
+            <span [routerLink]="['/artist', artistsString]" class="text-spotify-gray max-w-32 truncate text-xs">{{ artistsString || 'Artist Name' }}</span>
         </div>
         <!-- Add to Liked -->
 @if(!isLiked){
@@ -45,8 +45,10 @@
             class="flex items-center justify-center space-x-4 md:space-x-8 lg:space-x-14 w-full sm:w-60 md:w-72 lg:w-80">
             <!-- Shuffle -->
             <button (click)="toggleShuffle()" title="Shuffle"
+            [class.text-spotify-green-light]="isShuffle"
                 class="text-spotify-gray  group hover:text-white transition-colors">
                 <svg data-encore-id="icon" role="img" aria-hidden="true"
+
                     class="w-4 h-4 fill-current group-hover:fill-white duration-200" viewBox="0 0 16 16">
                     <path
                         d="M13.151.922a.75.75 0 1 0-1.06 1.06L13.109 3H11.16a3.75 3.75 0 0 0-2.873 1.34l-6.173 7.356A2.25 2.25 0 0 1 .39 12.5H0V14h.391a3.75 3.75 0 0 0 2.873-1.34l6.173-7.356a2.25 2.25 0 0 1 1.724-.804h1.947l-1.017 1.018a.75.75 0 0 0 1.06 1.06L15.98 3.75 13.15.922zM.391 3.5H0V2h.391c1.109 0 2.16.49 2.873 1.34L4.89 5.277l-.979 1.167-1.796-2.14A2.25 2.25 0 0 0 .39 3.5z">
@@ -96,13 +98,16 @@
 
             <!-- Repeat -->
             <button (click)="toggleRepeat()" title="Repeat"
-                class="text-spotify-gray group hover:text-white transition-colors">
+            [class.text-spotify-green-light]="onRepeat != 'off'"    
+            class="text-spotify-gray group hover:text-white transition-colors flex justify-end items-start">
+
                 <svg data-encore-id="icon" role="img" aria-hidden="true"
                     class="h-4 w-4 fill-current group-hover:fill-white duration-200" viewBox="0 0 16 16">
                     <path
                         d="M0 4.75A3.75 3.75 0 0 1 3.75 1h8.5A3.75 3.75 0 0 1 16 4.75v5a3.75 3.75 0 0 1-3.75 3.75H9.81l1.018 1.018a.75.75 0 1 1-1.06 1.06L6.939 12.75l2.829-2.828a.75.75 0 1 1 1.06 1.06L9.811 12h2.439a2.25 2.25 0 0 0 2.25-2.25v-5a2.25 2.25 0 0 0-2.25-2.25h-8.5A2.25 2.25 0 0 0 1.5 4.75v5A2.25 2.25 0 0 0 3.75 12H5v1.5H3.75A3.75 3.75 0 0 1 0 9.75v-5z">
                     </path>
                 </svg>
+                <span [class.flex]="onRepeat == 'track' ? true : false"  [class.hidden]="onRepeat != 'track' ? true : false"  class="text-[8px]  px-1 translate-x-1  -translate-y-1 justify-center items-center aspect-square rounded-full absolute bg-spotify-green-light text-white ">1</span>
             </button>
         </div>
 
@@ -110,7 +115,7 @@
         <div class="hidden w-full md:w-3/4 lg:w-4/6 max-w-xl mx-4 sm:flex items-center space-x-2">
             <!-- start  -->
             <span class="text-white text-xs">{{ formatTime(progressMs) }}</span>
-            <div #progressBar
+            <div #progressBar (click)="seekTo($event)"
                 class="relative cursor-pointer   group duration-200 w-full h-1 bg-spotify-gray-dark rounded-full">
                 <div class="absolute duration-200 flex items-center justify-end group-hover:bg-spotify-green-light h-full bg-white rounded-full"
                     [style.width.%]="progressPercent()">
@@ -126,7 +131,7 @@
 
 
     <!--  Controls -->
-    <div class="flex w-52 items-center justify-between space-x-2">
+    <div class="flex w-3/12 justify-end items-center space-x-2 ">
 
         <button class="group ">
             <svg data-encore-id="icon" role="img" aria-hidden="true"
@@ -139,7 +144,7 @@
             </svg>
         </button>
         <!-- volium  -->
-        <div class="flex group felx-row space-x-3 justify-center w-full items-center">
+        <div class="flex group felx-row space-x-3 max-w-40 justify-end w-full items-center">
             @if(!isMuted){
                 <button class="group " (click)="toggleMute()">
                     <svg data-encore-id="icon" role="presentation" aria-label="Volume high" aria-hidden="false"
@@ -153,8 +158,8 @@
                     </svg>
                 </button>
                     <!-- Bar -->
-            <div #volumeBar
-            class="relative cursor-pointer min-w-4  w-full  group duration-200  h-1 bg-spotify-gray-dark rounded-full">
+            <div #volumeBar (click)="setVolume($event) "
+            class="relative cursor-pointer min-w-4  w-full max-w-32  group duration-200  h-1 bg-spotify-gray-dark rounded-full">
             <div class="absolute duration-200 flex items-center justify-end group-hover:bg-spotify-green-light h-full bg-white rounded-full"
                 [style.width.%]="volumePercent"> <span
                     class=" p-1.5 z-30  duration-200  absolute translate-x-2  group-hover:bg-white rounded-full">
@@ -175,7 +180,7 @@
                     </svg>
                 </button>
                     <!-- Bar -->
-            <div #volumeBar
+            <div #volumeBar (click)="setVolume($event) "
             class="relative cursor-pointer min-w-4  w-full  group duration-200  h-1 bg-spotify-gray-dark rounded-full">
             <div class="absolute duration-200 flex items-center justify-end group-hover:bg-spotify-green-light h-full bg-white rounded-full"
                 [style.width.%]="0"> <span
